# plots

./: .gitignore  CMakeLists.txt  Makefile  PlotsManager  ProbRetainEvent.C  ProbRetainEvent.py  ProbRetainEvent.root  ProbRetainEvent.txt  ProbRetainEvent_C.d  README.md  goodRun17.list  plots.C  sshkey.txt  sshkey.txt.pub
backup/: SysStudy.cxx  SysStudy.h
build_temp/: MCAnalysis.root
include/: Config.h  CrossSectionMaker.h  Fit.h  FitJPsi.h  Libraries.h  Plot.h  PlotAnaJPsi.h  PlotAnaV0.h  PlotAnaV0Mult.h  PlotAnalysis.h  PlotBemcEfficiency.h  PlotEmbeddingJPsi.h  PlotGeneral.h  PlotGoodRun.h  PlotTofEff.h  PlotTofEffMult.h  PlotV0SingleState.h  PlotZeroBias.h  PlotsManager.h  ProbRetainEvent.h  Util.h  star-upcLinkDef.h
localDirectory/: FittingWithRooFit.C  HistsForTomas.root  RunEfficiency.sh  efficiency.C  fitPeaks.sh  getData.C  getData_C.d  getFile.sh
localDirectory/preselection/: StUPCRP_production_0000.root
scripts/: ProbRetainEvent.C  compareHists.C  getHistsFromTList.C  mergeData.C  workTofEffMult.C
src/: .giosave83TmjD  CrossSectionMaker.cxx  Fit.cxx  FitJPsi.cxx  Plot.cxx  PlotAnaJPsi.cxx  PlotAnaV0.cxx  PlotAnaV0Mult.cxx  PlotAnalysis.cxx  PlotBemcEfficiency.cxx  PlotEmbeddingJPsi.cxx  PlotGeneral.cxx  PlotGoodRun.cxx  PlotTofEff.cxx  PlotTofEffMult.cxx  PlotV0SingleState.cxx  PlotZeroBias.cxx  PlotsManager.cxx  ProbRetainEvent.cxx  SysStudy.cxx  Util.cxx  bichselG10.C
